# ssvm-nodejs-starter

./: .gitignore  Cargo.toml  Dockerfile  README.md  package.json
.devcontainer/: Dockerfile
node/: app.js
src/: lib.rs
